@@ -12,6 +12,7 @@ extern void BreakCond_MemorySnapShot_Capture(bool bSave);
 extern int BreakCond_MatchCpu(void);
 extern int BreakCond_MatchDsp(void);
 extern int BreakCond_BreakPointCount(bool bForDsp);
+extern char *BreakCond_MatchVariable(const char *text, int state);
 extern bool BreakCond_Command(const char *expression, bool bForDsp);
 
 #endif
