@@ -4,6 +4,13 @@
                                 Release Notes
 
 
+ Development version
+ -------------------
+
+Emulator:
+- Command completion support in debugger
+
+
  Version 1.3.1 (2009-09-05):
  ---------------------------
 
